--- a/React/codelab/practice/styles/scss/_signin.scss
+++ b/React/codelab/practice/styles/scss/_signin.scss
@@ -1,7 +1,7 @@
 .signin-container {
     @include container;
     background-color: #d8d8d8;
-    .wrapper {
+    .form {
         margin: 0 auto;
         width: 600px;
         height: 100%;
@@ -12,7 +12,7 @@
             background-color: $bg-white;
             width: 100%;
             border: 1px solid $bg-black;
-            .box-head {
+            .form-head {
                 border-bottom: 1px solid #d9d9d9;
                 padding: 20px;
                 text-align: center;
@@ -22,7 +22,7 @@
                     letter-spacing: -0.5px;
                 }
             } // .box-footer
-            .box-body {
+            .form-body {
                 border-bottom: 1px solid #d9d9d9;
                 padding: 20px;
                 .input-group {
@@ -47,7 +47,7 @@
                     }
                 } // .input-group
             } // .box-body
-            .box-footer {
+            .form-footer {
                 padding: 20px;
                 .btn-submit {
                     @include btn-black(100%, 50px);
